<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Guidelines">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="Guidelines"
            android:textColor="@color/primary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/primary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/who_can_give_blood"
                android:textColor="@color/secondary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/who_can_details_"
                android:textColor="@color/secondary"
                android:textSize="15sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textColor="@color/secondary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/age_details"
                android:textColor="@color/secondary"
                android:textSize="15sp" />

            <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow>

                    <TextView
                        android:layout_column="1"
                        android:text="@string/bullet_circle"
                        android:textColor="@color/primary" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_column="2"
                        android:layout_marginStart="10dp"
                        android:text="@string/age_1"
                        android:textColor="@color/primary" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_column="1"
                        android:text="@string/bullet_circle"
                        android:textColor="@color/primary" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_column="2"
                        android:layout_marginStart="10dp"
                        android:text="@string/age_2"
                        android:textColor="@color/primary" />
                </TableRow>
            </TableLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:textColor="@color/secondary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/weight_details"
                android:textColor="@color/secondary"
                android:textSize="15sp" />

            <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow>

                    <TextView
                        android:layout_column="1"
                        android:text="@string/bullet_circle"
                        android:textColor="@color/primary" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_column="2"
                        android:layout_marginStart="10dp"
                        android:text="@string/weight_1"
                        android:textColor="@color/primary" />
                </TableRow>
            </TableLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/health"
                android:textColor="@color/secondary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/health_details_1"
                android:textColor="@color/secondary"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/health_details_2"
                android:textColor="@color/secondary"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/health_details_3"
                android:textColor="@color/secondary"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/health_details_4"
                android:textColor="@color/secondary"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/health_details_5"
                android:textColor="@color/secondary"
                android:textSize="15sp" />

            <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow>

                    <TextView
                        android:layout_column="1"
                        android:text="@string/bullet_circle"
                        android:textColor="@color/primary" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_column="2"
                        android:layout_marginStart="10dp"
                        android:text="@string/health_1"
                        android:textColor="@color/primary" />
                </TableRow>
            </TableLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textColor="@color/secondary"
                android:textSize="20sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/age_details"
                android:textColor="@color/secondary"
                android:textSize="15sp" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>